solved the scrollbar problemmm

--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 body {
-	width: 900px;
+	max-width: 900px;
 	margin: 0 auto;
 	padding: 10px 20px;
 }
